<resources>
    <string name="app_name">DoToo</string>
    <string name="button_login">LOGIN</string>
    <string name="button_signup">SIGNUP</string>
    <string name="logo">Dotoo logo</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="toast_signup_username_taken">That username is taken. Try another.</string>
    <string name="signup_password_incorrect_length">Password must be at least 8 characters</string>
    <string name="signup_no_password">Please enter a password</string>
    <string name="fab">floating action button</string>


    <string name="no_username">Username is missing.</string>
    <string name="no_password">Please enter a password.</string>
    <string name="inc_pass_usern">Username and/or password is incorrect.</string>
    <string name="menu_home">Home</string>
    <string name="menu_todolists">TodoLists</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_friends">Friends</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="event_title">Title</string>
    <string name="save_event">Save event</string>
    <string name="save_todo_list">Save Todo list</string>
    <string name="cancel">Cancel</string>
    <string name="button_newEvent">New event</string>
    <string name="dialog_newEvent">New Event</string>
    <string name="event_startTime">Start time</string>
    <string name="event_endTime">End time</string>
    <string name="event_startDate">Start date</string>
    <string name="event_endDate">End date</string>
    <string name="todolists">TODOLISTS</string>
    <string name="home">HOME</string>
    <string name="calendar">CALENDAR</string>
    <string name="friendList">FRIENDS</string>
    <string name="dialog_newTodolist">New Todo List</string>
    <string name="to_do_title">Title</string>
    <string name="thank_you_sign_up">Thank you for signing up </string>
    <string name="end_date_greater">End date should be greater than start date </string>
    <string name="delete_event">Delete event</string>
    <string name="delete_event_confirm">Are you sure you want to delete this event ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_newFriend">Add friend</string>
    <string name="dialog_newFriendUsername">Username</string>
    <string name="expand_icon">Expand icon</string>
    <string name="favorite_todolists">Favorite todolists</string>
    <string name="friend_streak">Friend streak</string>
    <string name="quote_header">Quote of the day</string>
</resources>