<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textSize="48dp">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:textSize="64dp"
        android:title="@string/menu_home"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_todolists"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_todolists"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:textSize="64dp"/>
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_lock"
        android:title="@string/menu_calendar"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:textSize="64dp"/>
</menu>