<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="101.1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_dotoo_blue"
        android:contentDescription="@string/logo" />

    <View
        android:id="@+id/signup_upper_box"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="44dp"
        android:background="@drawable/ic_startup_upper_box"
        />

    <View
        android:id="@+id/signup_lower_box"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="82dp"
        android:background="@drawable/ic_startup_lower_box" />

    <Button
        android:id="@+id/button_signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="243dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_button"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/button_signup"
        android:textColor="@color/text_blue"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_pen"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:paddingLeft="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_login_textfield"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginBottom="236dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_name"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_user"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:paddingLeft="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_login_textfield"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginBottom="186dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_username"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_lock"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:paddingLeft="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_login_textfield"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginBottom="136dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password" />
</RelativeLayout>