<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:id="@+id/startup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark_blue"
    >

    <View
        android:layout_width="360dp"
        android:layout_height="304dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/ic_larger_triangles"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="101.1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_dotoo_blue"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/button_startup_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="243dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/ic_button"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/button_login"
        android:textColor="@color/text_blue"
        android:textSize="26sp" />

    <Button
        android:id="@+id/button_startup_signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="243dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_button"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/button_signup"
        android:textColor="@color/text_blue"
        android:textSize="26sp" />
</RelativeLayout>