<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Activities.TodoListActivity"
    android:background="@color/dark_blue">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right|bottom"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="192dp"
            android:contentDescription="@string/fab"
            android:src="@drawable/ic_plus"
            app:backgroundTint="@color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <ImageView
            android:layout_width="37.5dp"
            android:layout_height="25.275dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_dotoo_blue"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="11.5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/todolists"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/todolist_expandableList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:descendantFocusability="afterDescendants"
        android:childDivider="#FFDBB9"
        android:divider="#FFC895">

        <View
            android:layout_width="79.445dp"
            android:layout_height="63dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_triangles" />
    </ExpandableListView>




    <include
        layout="@layout/bottom_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />


</LinearLayout>



</RelativeLayout>